refactor: 扁平化为单级包结构并切换 spring-boot-starter-parent，兼容 Spring Boot 2.x/3.x 与 Java 8+
- 将 mqtt.core / mqtt.annotation / mqtt.autoconfigure / mqtt.autoconfigure.properties
  下的 6 个类全部上提到单一包 io.github.persiliao.mqtt
- 父 POM 由 spring-boot-starter:3.0.1 切换为 spring-boot-starter-parent:2026.1.1，
  Spring Boot 版本改由 ${spring-boot.version} 继承可覆盖，不再硬编码
- 移除全部 jakarta.* 依赖：jakarta.annotation.PreDestroy 改用 Spring
  DisposableBean；去掉 jakarta.validation 约束注解与 @Validated，
  依赖原有手动校验，从而与 javax/jakarta 命名空间解耦
- 重写所有 Java 9+ 语法为 Java 8 兼容写法（文本块/switch 表达式/
  Stream.toList/String.formatted/isBlank/pattern-matching instanceof/
  匿名类菱形泛型），maven.compiler.release=8，产物为字节码 52
- 同时保留 spring.factories(SB2) 与 AutoConfiguration.imports(SB3) 双注册
- 更新自动配置注册文件中的类全名与 README 兼容说明